minor status updates

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 				<section>
 				<h2>Paul Zerkel</h2>
-				<div>
+				<div class="logo-block">
 					CTO @
 					<img class="no-border" src="images/mi-logo.png">
 				</div>
-				<div>
+				<div class="logo-block">
 					Consultant @
 					<img class="no-border" src="images/sl-logo.png">
 				</div>
