--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					<p>The logger is the object used to log a message</p>
 					<p>It is configured with a level and one or more transports</p>
 					<p>Winston provides a default configuration or you can create your own</p>
-					<p>You application can have many loggers</p>
+					<p>Your application can have many loggers</p>
 				</section>
 
 				<section>
