--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ warn: That's no moon...
 					<h2>Log Messages</h2>
 					<p>The core of a message is just a string</p>
 					<p>Consider something more meaningful than 'Stuff is happening'</p>
-					<p>User defined metadata can be part of the message as well and Winston can include a timestam and the level of the message</p>
+					<p>User defined metadata can be part of the message as well and Winston can include a timestamp and the level of the message</p>
 				</section>
 
 				<section>
