more typo fixes

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ info: system status
 				</section>
 
 				<section>
-					<h2>Core Transports</h2>
+					<h2>Transports - Winston Core</h2>
 					<p>Shipped with Winston and supported by the core team</p>
 					<ul>
 						<li>Console</li>
@@ -318,11 +318,11 @@ info: system status
 				<section>
 					<h2>File Transport</h2>
 					<p>Used for persisting logs to disk</p>
-					<p>Can be onfigured with a max file size, max number of files, abilitiy to zip archives and more</p>
+					<p>Can be configured with a max file size, max number of files, ability to zip archives and more</p>
 				</section>
 
 				<section>
-					<h2>Winston More Transports</h2>
+					<h2>Transports - Winston More</h2>
 					<p>These transports were originally part of Winston, but were removed in order to keep dependencies to a minimum</p>
 					<p>The transports are still maintained by the core Winston team</p>
 					<ul>
