--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>Logging with Winston</title>
 		<link rel="stylesheet" href="reveal/css/reveal.css">
 		<link rel="stylesheet" href="reveal/css/theme/solarized.css">
 		<link rel="stylesheet" href="reveal/lib/css/zenburn.css">
